@@ -1,0 +1,100 @@
+<html xmlns:tal="http://xml.zope.org/namespaces/tal"
+      xmlns:metal="http://xml.zope.org/namespaces/metal"
+      i18n:domain="plone">
+  <body>
+
+    <!--? Items -->
+    <!--? Serie of conditions to render the right macro -->
+    <metal:items metal:define-macro="related_items">
+
+      <tal:block tal:condition="python:item.portal_type == 'Advisory'">
+        <tal:block metal:use-macro="context/@@items/macros/advisory_link">
+        </tal:block>
+      </tal:block>
+
+      <tal:block tal:condition="python:item.portal_type == 'MREvent'">
+        <tal:block metal:use-macro="context/@@items/macros/event">
+        </tal:block>
+      </tal:block>
+
+      <tal:block tal:condition="python:item.portal_type == 'Hearing'">
+        <tal:block metal:use-macro="context/@@items/macros/hearing">
+        </tal:block>
+      </tal:block>
+
+    </metal:items>
+
+    <!--? Advisory -->
+    <metal:block metal:define-macro="advisory_link">
+      <article class="article-advice">
+        <a tal:attributes="href item/absolute_url">
+          <tal:image
+              tal:define="images item/@@images;
+              thumbnail python:images.scale('foto', width=648, height=365, direction='down')"
+              tal:condition="thumbnail">
+            <img tal:attributes="src thumbnail/url; alt item/title" />
+          </tal:image>
+          <div class="body">
+            <h3 tal:content="item/Title"></h3>
+            <p class="label" tal:define="theme item/getThemeObject|nothing">Advies 
+              <span tal:condition="nocall:theme" tal:content="theme/title"></span>
+            </p>
+            <p class="truncate" tal:content="item/Description"></p>
+          </div>
+        </a>
+      </article>
+    </metal:block>
+
+    <!--? MREvent -->
+    <metal:block metal:define-macro="event">
+      <article class="article-event">
+        <a tal:attributes="href item/getURL; title item/Title">
+          <header>
+            <h3 tal:define="d item/getStart_time|nothing">
+              <i class="fa fa-comments"></i>
+              <metal:block use-macro="context/display_macros/macros/date" />
+            </h3>
+          </header>
+          <div class="body">
+            <!--? TODO: We are handling brains. So getObject to find it's parent. :/ -->
+            <p class="label" tal:define="item item/getObject">Evenement 
+              <span tal:define="theme item/getThemeObject"
+                    tal:condition="theme"
+                    tal:content="theme/title"></span>
+            </p>
+            <h3 tal:content="item/Title"></h3>
+          </div>
+        </a>
+      </article>
+    </metal:block>
+
+    <!--? Hearing -->
+    <metal:block metal:define-macro="hearing">
+      <article class="article-event">
+        <!--? TODO: Add href to a. Error on `href item/getURL;z -->
+        <a tal:attributes="title item/Title">
+          <header>
+            <h3 tal:define="d item/getStart_time|nothing">
+              <i class="fa fa-comments"></i>
+              <metal:block use-macro="context/display_macros/macros/date" />
+            </h3>
+          </header>
+          <div class="body">
+            <p class="label">Hoorzitting 
+              <span tal:define="theme item/getThemeObject"
+                    tal:condition="nocall:theme"
+                    tal:content="theme/title"></span>
+            </p>
+            <h3 tal:content="item/Title"></h3>
+          </div>
+        </a>
+      </article>
+    </metal:block>
+
+    <!--? Study link -->
+    <metal:block metal:define-macro="study">
+      <h1>TODO: Study</h1>
+    </metal:block>
+
+  </body>
+</html>
